# greatbadbeyond

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  PERF.md  PLAN.md  build.rs  build.sh  pyproject.toml
.zed/: keymap.json  run_project.cmake  tasks.json
cmake/: embed_spv.cmake
resources/shaders/: forward_opaque.frag  forward_opaque.vert  fullscreen_triangle.frag  fullscreen_triangle.vert  gradient.comp  pathtracer.comp  shadow_depth.vert  sky.frag  sky.vert  triangle.comp  triangle.frag  triangle.vert
scripts/: build_kenney_index.sh  build_kenney_manifest.sh  build_kenney_semantic_index.sh  generate_kenney_pack.sh
shaders/: bindings.inc.glsl  blit.frag  blit.frag.glsl  blit.glsl  blit.vert.glsl  blue_noise.inc.glsl  compute.comp  compute.comp.glsl  compute.glsl  compute.wgsl  denoise.comp.glsl  fullscreen.vert  fullscreen.wgsl  gradient.comp  grid_l0_count.comp  grid_l0_fill.comp  grid_l0_offsets.comp  grid_l1_count.comp  grid_l1_fill.comp  grid_l1_offsets.comp  physics.comp  physics_collide.comp
src/: VulkanInstance.ixx  app.rs  assert.cpp  assert.ixx  callandor.h  camera.cpp  camera.rs  config.h  defer.cpp  gfx.rs  glfw.ixx  greadbadbeyond.h  input.rs  macos_platform.m  main.c  main.cpp  main.rs  manifest_blob.cpp  metrics.rs  platform.cpp  platform.h  platform.ixx  rng.rs  rt_frame.c  rt_frame.h  rt_resources.c  rt_resources.h  runtime.h  scene.rs  shader_bindings.h  stack_only_vector.ixx  state.rs  types.cpp  utils.h  vk_bootstrap.c  vk_bootstrap.h  vk_descriptors.c  vk_descriptors.h  vk_pipelines.c  vk_pipelines.h  (+8 more)
src/glfw/: window.cpp
src/greatbadbeyond/: __init__.py  __main__.py  kenney_pipeline.py  trace_viz.py
src/vulkan/: device.cpp  headers.cpp  instance.cpp
tools/manifest_codegen/: generate_manifest.py
